<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".DataViewActivity">

    <TextView
        android:id="@+id/textViewTemperatureLabel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:text="@string/AquariumTempLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWaterLevelLabel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/AquariumWaterLevelLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureLabel" />

    <TextView
        android:id="@+id/textViewTemperatureData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/textViewTemperatureLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWaterLevelData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/textViewWaterLevelLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureData" />

    <Button
        android:id="@+id/buttonExitDataView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="exitView"
        android:text="@string/ExitButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewWaterChangeDateData"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:layout_width="100dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewWaterChangeDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterLevelData" />

    <TextView
        android:id="@+id/textViewWaterChangeDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/WaterChangeDateLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterLevelLabel" />

    <TextView
        android:id="@+id/textViewIronAdditionDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/IronAdditonLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterChangeDate" />

    <TextView
        android:id="@+id/textViewIronAdditionDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:gravity="left"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewIronAdditionDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterChangeDateData" />

    <TextView
        android:id="@+id/textViewFilterChangeDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="right"
        android:text="@string/PurigenFilterChangeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIronAdditionDate" />

    <TextView
        android:id="@+id/textViewPurigenChangeDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="left"
        app:layout_constraintStart_toEndOf="@+id/textViewFilterChangeDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewIronAdditionDateData" />

    <TextView
        android:id="@+id/textViewClearMaxChangeDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/ClearMaxChangeLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFilterChangeDate" />

    <TextView
        android:id="@+id/textViewClearMaxChangeDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/FoamFilterLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClearMaxChangeDate" />

    <TextView
        android:id="@+id/textViewFoamFilterDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewClearMaxChangeDateData" />

    <TextView
        android:id="@+id/textViewBioFoamFilterDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/BioFoamFilterLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewBioFoamFilterDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewBioFoamFilterDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewFoamFilterDateData" />

    <TextView
        android:id="@+id/textViewWormFoodDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/WormFoodLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBioFoamFilterDate" />

    <TextView
        android:id="@+id/textViewWormFoodDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewWormFoodDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewBioFoamFilterDateData" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/FilterChangeLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWormFoodDate" />

    <TextView
        android:id="@+id/textViewFilterChangeDateData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textViewWormFoodDateData" />

</androidx.constraintlayout.widget.ConstraintLayout>